add tabs in user profile page
-- design experience tab

--- a/html/unique/wishlist.html
+++ b/html/unique/wishlist.html
@@ -1136,9 +1136,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">3.9</span></div><span class="text-content3 text-xs">540 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1157,9 +1155,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">4.6</span></div><span class="text-content3 text-xs">70 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1178,9 +1174,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">4.5</span></div><span class="text-content3 text-xs">125 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1199,9 +1193,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">2.5</span></div><span class="text-content3 text-xs">150 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1220,9 +1212,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">4.7</span></div><span class="text-content3 text-xs">150 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1241,9 +1231,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">4.9</span></div><span class="text-content3 text-xs">150 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1262,9 +1250,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">3.6</span></div><span class="text-content3 text-xs">150 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
@@ -1283,9 +1269,7 @@
                         <div class="flex items-center gap-1 bg-warning py-1 px-2 rounded-5 max-w-max"><i class="w-[0.8rem] h-[0.8rem] stroke-white fill-white" data-feather="star"></i><span class="font-semibold leading-none text-white text-2xs mt-[3px]">4.5</span></div><span class="text-content3 text-xs">150 Ratings</span>
                       </div>
                       <p class="text-title text-2xs mt-2">Free delivery by Govo</p></a></div>
-                  <div class="pt-2 flex justify-end">
-                    <button class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs">Add To Cart</button>
-                  </div>
+                  <div class="pt-2 flex justify-end"><a class="btn btn-outline btn-secondary text-white py-1 px-2 text-3xs" href="cart.html">Add To Cart</a></div>
                 </div>
               </div>
             </div>
