--- a/html/unique/user-profile.html
+++ b/html/unique/user-profile.html
@@ -1119,24 +1119,22 @@
         </div>
         <!-- Sidebar End -->
         <!-- Page Body Start-->
-        <div class="page-body">
-          <div class="user-bg"> <img class="w-full h-80" src="../../assets/images/user-app/bg.jpg" alt=""></div>
-          <div class="grid grid-cols-12 gap-card-gap px-body-space mt-[-100px]">
-            <div class="col-span-3">
-              <div class="grid grid-cols-12 gap-4">
-                <div class="col-span-12">
-                  <div class="card"> 
-                    <div class="card-body flex flex-col gap-4 items-center justify-center">
-                      <div class="avatar rounded-xl overflow-visible w-[128px] h-[123px] relative mb-4"><img src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"><span class="p-1 bg-white rounded-full absolute bottom-[-12px] right-[-12px] shadow-xl"><a href="user-profile.html">
-                            <svg class="w-5 h-5 stroke-title"> 
-                              <use href="../../assets/svg/_sprite.svg#Edit"> </use>
-                            </svg></a></span></div>
-                      <div class="text-center">
-                        <p class="text-xs text-title font-semibold">Emayila Sidorshina</p><span class="text-2xs text-content3 font-semibold"> emayiladosidorshina@gmail.com</span>
-                      </div>
-                    </div>
+        <div class="page-body user-profile">
+          <div class="grid grid-cols-12 gap-card-gap">
+            <div class="col-span-12">
+              <div class="user-bg card p-0"><img class="w-full h-80" src="../../assets/images/user-app/bg.jpg" alt="">
+                <div class="flex user-detail items-center gap-4">
+                  <div class="avatar rounded-full w-24 h-24 p-[2px] bg-white"><img class="rounded-full" src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"></div>
+                  <div class="text-start">
+                    <p class="text-content-white font-semibold text-base">Emayila Sidorshina</p><span class="text-content font-semibold text-2xs">Owner & Founder</span><span class="text-content font-semibold text-2xs mt-2 flex gap-1 items-center"> <i class="w-3 h-3 stroke-content" data-feather="map-pin"></i>Maryland, US</span>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-cols-12 gap-card-gap user-profile-detail px-body-space mt-[-100px]">
+            <div class="col-span-3">
+              <div class="grid grid-cols-12 gap-4">                              
                 <div class="col-span-12">
                   <div class="card"> 
                     <div class="card-header"> 
@@ -1189,7 +1187,178 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-9"></div>
+            <div class="col-span-9 lg:col-span-12 w-full tabs flex flex-col"> 
+              <div class="card gap-1">
+                <div class="card-header flex items-center justify-between gap-2">
+                  <h3 class="text-lg font-bold">Portfolio </h3>
+                  <div class="tab-links flex items-center justify-end 2md:flex-col border-b border-border-light">
+                    <button class="tab tabs-bordered user-tab flex items-center justify-center tab-active text-content3 !flex-row !gap-2 tab-link" data-tabFilter="1"><i class="fa-solid fa-user w-4 h-4 stroke-title-content3"></i>Profile  </button>
+                    <button class="tab tabs-bordered user-tab flex items-center justify-center text-content3 !flex-row !gap-2 tab-link" data-tabFilter="2"><i class="fa-solid fa-briefcase w-4 h-4 stroke-title-content3"></i>Experience</button>
+                    <button class="tab tabs-bordered user-tab flex items-center justify-center text-content3 !flex-row !gap-2 tab-link" data-tabFilter="4"><i class="fa-regular fa-image w-4 h-4 stroke-title-content3"></i>Photos  </button>
+                  </div>
+                </div>
+                <div class="card-body"> 
+                  <div class="tabs-content">
+                    <div class="tab-pan fade active show first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="1">
+                      <div class="flex flex-col gap-4">
+                        <div class="flex items-center gap-4"> 
+                          <div class="flex user-detail items-center gap-4">
+                            <div class="bg-gray-light w-8 h-8 grid place-content-center rounded-full"><i class="fa-solid fa-user-tie"></i></div>
+                            <div class="text-start">
+                              <p class="text-title font-semibold text-xs">Designation</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer        </span>
+                            </div>
+                          </div>
+                          <div class="flex user-detail items-center gap-4">
+                            <div class="bg-gray-light w-8 h-8 grid place-content-center rounded-full"><i class="fa-solid fa-globe"></i></div>
+                            <div class="text-start">
+                              <p class="text-title font-semibold text-xs">Website</p><span class="text-content3 font-semibold text-2xs">www.govo.com                                                         </span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="flex flex-col gap-2">
+                          <p class="text-content3 text-xs">Emayila Sidorshina here. It will be as straightforward as Occidental—it will even be Occidental. It will appear to be simplified English to an English person, as a dubious Cambridge friend of mine explained to me what Occidental is. The family of European languages includes all of them.</p>
+                          <p class="text-content3 text-xs">Always check to see if your typefaces are compatible with one another, and aim to use no more than three. Use the fonts that you already have in the software you're using to experiment and play around with. This could be the advice that I heard from designers the most frequently. They strongly advise using multiple typefaces in a single design, but refrain from going overboard and</p>
+                        </div>
+                        <div class="flex flex-col gap-3"> 
+                          <h5 class="font-semibold text-title">Projects </h5>
+                          <div class="grid grid-cols-12 gap-card-gap"> 
+                            <div class="col-span-4">
+                              <div class="border border-border-light border-dashed p-4 flex flex-col gap-5"> 
+                                <div class="flex items-center justify-between"> 
+                                  <div> 
+                                    <p class="text-title text-sm font-medium">Figma Logo Design </p>
+                                    <p class="text-content3 text-3xs">Last Update: <span>3 hr Ago </span></p>
+                                  </div>
+                                  <badge class="bg-secondary-extralight text-secondary badge-sm rounded-5">Inprogress  </badge>
+                                </div>
+                                <div class="avatar-group -space-x-6">
+                                  <div class="avatar border-white border-[0.125rem]">
+                                    <div class="w-10"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                  </div>
+                                  <div class="avatar border-white border-[0.125rem]">
+                                    <div class="w-10"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                  </div>
+                                  <div class="avatar border-white border-[0.125rem]">
+                                    <div class="w-10"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-span-4">
+                              <div class="border border-border-light border-dashed p-4 flex flex-col gap-5"> 
+                                <div class="flex items-center justify-between"> 
+                                  <div> 
+                                    <p class="text-title text-sm font-medium">Fitness Club </p>
+                                    <p class="text-content3 text-3xs">Last Update: <span>6 months Ago</span></p>
+                                  </div>
+                                  <badge class="bg-primary-light text-primary badge-sm">Completed </badge>
+                                </div>
+                                <div class="avatar-group -space-x-6">
+                                  <div class="avatar border-white border-[0.125rem]">
+                                    <div class="w-10"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                  </div>
+                                  <div class="avatar border-white border-[0.125rem]">
+                                    <div class="w-10"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-span-4">
+                              <div class="border border-border-light border-dashed p-4 flex flex-col gap-5"> 
+                                <div class="flex items-center justify-between"> 
+                                  <div> 
+                                    <p class="text-title text-sm font-medium">Figma Logo Design </p>
+                                    <p class="text-content3 text-3xs">Last Update: <span>3 hr Ago </span></p>
+                                  </div>
+                                  <badge class="bg-secondary-extralight text-secondary badge-sm rounded-5">Inprogress  </badge>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-span-4">
+                              <div class="border border-border-light border-dashed p-4 flex flex-col gap-5"> 
+                                <div class="flex items-center justify-between"> 
+                                  <div> 
+                                    <p class="text-title text-sm font-medium">Figma Logo Design </p>
+                                    <p class="text-content3 text-3xs">Last Update: <span>3 hr Ago </span></p>
+                                  </div>
+                                  <badge class="bg-secondary-extralight text-secondary badge-sm rounded-5">Inprogress  </badge>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-span-4">
+                              <div class="border border-border-light border-dashed p-4 flex flex-col gap-5"> 
+                                <div class="flex items-center justify-between"> 
+                                  <div> 
+                                    <p class="text-title text-sm font-medium">Figma Logo Design </p>
+                                    <p class="text-content3 text-3xs">Last Update: <span>3 hr Ago </span></p>
+                                  </div>
+                                  <badge class="bg-secondary-extralight text-secondary badge-sm rounded-5">Inprogress  </badge>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="2">
+                      <div class="flex flex-col gap-4"> 
+                        <div class="flex items-start user-detail gap-4 border-b border-border-light border-dashed last:border-none pb-5 last:pb-0">
+                          <div class="grid place-content-center bg-gray-light w-20 rounded-full text-xl h-20 p-8">ST</div>
+                          <div class="text-start">
+                            <h5 class="text-title font-semibold">Software Technology</h5>
+                            <p class="text-content3 font-semibold text-xs">Senior Web Designer</p><span class="text-content3 font-semibold text-xs">Working</span>
+                            <ul class="list-disc pl-5 mt-2"> 
+                              <li class="text-content3 text-xs">To accommodate the requirements of projects and enterprises that are designing swiftly, add new features and upgrade infrastructure.</li>
+                              <li class="text-content3 text-xs">Participate in all phases of agile software development, including design, implementation, and deployment.</li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="flex items-start user-detail gap-4 border-b border-border-light border-dashed last:border-none pb-5 last:pb-0">
+                          <div class="grid place-content-center bg-gray-light w-20 rounded-full text-xl h-20 p-8">SE</div>
+                          <div class="text-start">
+                            <h5 class="text-title font-semibold">Software Express</h5>
+                            <p class="text-content3 font-semibold text-xs">Frontend Engineer        </p><span class="text-content3 font-semibold text-xs">2019 - 2021 / 2 yrs</span>
+                            <ul class="list-disc pl-5 mt-2"> 
+                              <li class="text-content3 text-xs">Create new features and upgrade infrastructure to meet the needs of projects and businesses that are developing quickly.</li>
+                              <li class="text-content3 text-xs">Work using agile development processes, following best practices, and seeking out opportunities for ongoing learning.</li>
+                              <li class="text-content3 text-xs">Take the helm of new projects from conception to execution.</li>
+                              <li class="text-content3 text-xs">Build highly scalable distributed systems that provide satisfying user experiences and quantifiable company growth by working across the entire stack.</li>
+                              <li class="text-content3 text-xs">While upholding strict standards for the quality of the code and the smart design of the programme, ensure application performance, uptime, and scale.</li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="flex items-start user-detail gap-4 border-b border-border-light border-dashed last:border-none pb-5 last:pb-0">
+                          <div class="grid place-content-center bg-gray-light w-20 rounded-full text-xl h-20 p-8">TI </div>
+                          <div class="text-start">
+                            <h5 class="text-title font-semibold">Technical Info</h5>
+                            <p class="text-content3 font-semibold text-xs">Designer/developer in charge         </p><span class="text-content3 font-semibold text-xs">2016 - 2019 / 3 yrs</span>
+                            <ul class="list-disc pl-5 mt-2"> 
+                              <li class="text-content3 text-xs">To accommodate the requirements of projects and enterprises that are designing swiftly, add new features and upgrade infrastructure.</li>
+                              <li class="text-content3 text-xs">The performance, uptime, and scale of the application should be ensured while adhering to tight criteria for the calibre of the code and the clever design of the programme.                                                  </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="flex items-start user-detail gap-4 border-b border-border-light border-dashed last:border-none pb-5 last:pb-0">
+                          <div class="grid place-content-center bg-gray-light w-20 rounded-full text-xl h-20 p-8">FR</div>
+                          <div class="text-start">
+                            <h5 class="text-title font-semibold">Freelancer</h5>
+                            <p class="text-content3 font-semibold text-xs">Fullstack Engineer        </p><span class="text-content3 font-semibold text-xs">2012 - 2016 / 4 yrs  </span>
+                            <ul class="list-disc pl-5 mt-2"> 
+                              <li class="text-content3 text-xs">Take part in the design, execution, and deployment of all areas of agile software development.</li>
+                              <li class="text-content3 text-xs">Use Slack, GitHub comments, papers, and frequent video conferencing to collaborate across time zones.</li>
+                              <li class="text-content3 text-xs">Build end-to-end systems that are architected and guided for speed and size.</li>
+                              <li class="text-content3 text-xs">Collaboration with talented back end engineers, front end engineers, and designers.</li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="3"></div>
+                    <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="4"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <!-- Page Body End  -->
           <div class="page-footer sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
