started design edit-profile page

--- a/html/unique/user-edit.html
+++ b/html/unique/user-edit.html
@@ -1167,7 +1167,37 @@
           </div>
           <div class="grid grid-cols-12 gap-card-gap user-profile-detail px-body-space mt-[-70px] relative 3sm:px-unset">
             <div class="col-span-3 4xl:col-span-4 lg:col-span-12">
-              <div class="grid grid-cols-12 gap-4 top-0 sticky">                              
+              <div class="grid grid-cols-12 gap-4 top-0 sticky"> 
+                <div class="col-span-12 lg:col-span-6 2md:col-span-12 lg:order-first">
+                  <div class="card"> 
+                    <div class="card-body"> 
+                      <div class="user-detail flex flex-col gap-4">
+                        <div class="flex items-center gap-5 2sm:gap-2">
+                          <div class="avatar rounded-full w-20 2sm:w-16 2sm:h-16 h-20 p-[2px] bg-white"><img class="rounded-full" src="../../assets/images/avatar/38.jpg" alt="girl in yellow jacket"></div>
+                          <div class="flex items-center gap-3 2sm:gap-2">
+                            <div class="text-center"> 
+                              <p class="text-white font-semibold text-xs">359 </p><span class="text-white font-medium">Posts</span>
+                            </div>
+                            <div class="text-center"> 
+                              <p class="text-white font-semibold text-xs">4.5K </p><span class="text-white font-medium">Followers</span>
+                            </div>
+                            <div class="text-center"> 
+                              <p class="text-white font-semibold text-xs">2.487 </p><span class="text-white font-medium">Following</span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="flex flex-col gap-2">
+                          <div> 
+                            <p class="text-content-white font-semibold text-xs">Emayila Sidorshina</p>
+                            <p class="text-content-white font-semibold text-xs">Freelancer</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="grid grid-cols-12 gap-4">                            
                 <div class="col-span-12 lg:col-span-6 2md:col-span-12 lg:order-first">
                   <div class="card"> 
                     <div class="card-header"> 
