--- a/html/unique/user-profile.html
+++ b/html/unique/user-profile.html
@@ -1203,7 +1203,7 @@
                         </li>
                         <li class="flex justify-between items-center">
                           <div class="flex items-center gap-2 w-full">
-                            <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/13.png" alt="undefined"/></div>
+                            <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/19.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
                               <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
@@ -1213,7 +1213,7 @@
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/23.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title font-semibold text-xs">Werner Barrows</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
                           </div><a class="btn btn-success btn-outline p-1 group" href="javascript:void(0)"> <i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="user-plus"> </i></a>
                         </li>
@@ -1232,7 +1232,7 @@
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/17.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Abdul Volkman</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
+                              <p class="text-title font-semibold text-xs">Gretchen Harvey</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
                             </div>
                           </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
                         </li>
@@ -1240,7 +1240,7 @@
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/16.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title font-semibold text-xs">Raegan Corkery</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
                           </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
                         </li>
@@ -1248,7 +1248,7 @@
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/21.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title font-semibold text-xs">Josue Smith</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
                           </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
                         </li>
@@ -1283,7 +1283,7 @@
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/20.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title font-semibold text-xs">Patricia Kulas</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
                           </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)">Follow</a>
                         </li>
